		Open the system again.
		If you want you may restart mbtask.

	general:
		Updated to a new files database structure that allows for
		expanding the records like most other databases to allow new
		features.
		Removed all references to costsharing for ticfiles which wasn't
		fully implemented.

	mbcico:
		Updated file request function to new files database structure.

	mbfido:
		When removing files during tic import due to replace or maximum
		files, thumbnails are now also removed from disk.
		Updated tic file import function to the new files database
		structure.

	mbfile:
		Updated kill, index, check, pack, list, adopt, import, move,
		delete and sort to the new files database structure.
		The file delete function in kill didn't delete the thumbnail.
		The mbfile del and undel commands accept wildcards in the 
		filename.
		Fixed an error in check when a mangled 8.3 filename was changed
		and the symbolic link was not adjusted.
		Added rearc command.

	mbaff:
		When scanning for uploads, files which were hatched now have
		the right tic area name instead of AREA n in the announce
		record. They also contain the used magic filename if this is
		known.
		The scan for new uploads function is updated to the new files
		database structure.
		The filefind function is updated to the new files database
		structure.

	mbsebbs:
		Updated to the new files database structure.

	mbsetup:
		Added auto upgrade for the files database.
		Changed menus 14, 7.n.6, 10.1 and 8.4.
		Changed default charset for new mailgroups and message areas
		to CP437.

	examples:
		Updated English, German, Spanish and Dutch macro files:
		html.nodes and filemgr.status.

	lang:
		removed obsolede prompt 240.


v0.51.1		21-Feb-2004 - 06-Mar-2004

	upgrade:
		In all message groups set check/set default character set.
		In all message areas set the character set to use with the
		global editor (to Latin-1 for example). Local and netmail
		areas must be done by hand because they are most likely not