@@ -1,6 +1,7 @@
 #ifndef	_UTIC_H
 #define	_UTIC_H
 
+/* $Id$ */
 
 char *MakeTicName(void);
 int  Day_Of_Year(void);
@@ -9,7 +10,6 @@ void DeleteVirusWork(void);
 void Bad(char *, ...);
 void ReCalcCrc(char *);
 int  Get_File_Id(void);
-void UpDateAlias(char *);
 
 
 #endif
